--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/iluminar-public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iluminar</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital@0;1&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.82fd07e6.js"></script>
-    <link rel="stylesheet" href="/assets/index.af21ffc9.css">
+    <script type="module" crossorigin src="/iluminar-public/assets/index.82fd07e6.js"></script>
+    <link rel="stylesheet" href="/iluminar-public/assets/index.ad895ca5.css">
   </head>
   <body>
     <div id="app"></div>
